# swagger.yaml
@@ -1577,6 +1577,9 @@ definitions:
       type: integer
     type: array
     x-go-package: go-klikdokter/pkg/util/datatype
+  JWTInfo:
+    type: object
+    x-go-package: go-klikdokter/helper/global
   MetaResponse:
     properties:
       code:
@@ -2557,6 +2560,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/CourierByChannel'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
   /channel/channel-app:
@@ -2601,6 +2606,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
     post:
@@ -2621,6 +2628,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
   /channel/channel-app/{uid}:
@@ -2643,6 +2652,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
     get:
@@ -2664,6 +2675,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
     put:
@@ -2690,6 +2703,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
   /channel/channel-courier-service/:
@@ -2722,6 +2737,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ChannelCourierServiceList'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     post:
@@ -2736,6 +2753,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ChannelCourierServiceDetailResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
   /channel/channel-courier-service/{uid}:
@@ -2754,6 +2773,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     get:
@@ -2769,6 +2790,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ChannelCourierServiceDetailResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     put:
@@ -2789,6 +2812,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ChannelCourierServiceDetailResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
   /channel/channel-courier/:
@@ -2836,6 +2861,8 @@ paths:
           description: PaginationResponse
           schema:
             $ref: '#/definitions/PaginationResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     post:
@@ -2854,6 +2881,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
   /channel/channel-courier/{uid}:
@@ -2872,6 +2901,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     get:
@@ -2887,6 +2918,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ChannelCourierDTO'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
     put:
@@ -2913,6 +2946,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Courier-Service
   /channel/channel-status-courier-status:
@@ -2952,6 +2987,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/GetChannelCourierStatusResponse'
+      security:
+      - Bearer: []
       tags:
       - Channel-Apps
   /courier/courier:
@@ -2996,6 +3033,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Couriers
     post:
@@ -3020,6 +3059,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Couriers
   /courier/courier-coverage-code/:
@@ -3066,6 +3107,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
     post:
@@ -3082,6 +3125,8 @@ paths:
           description: errorResponse
           schema:
             $ref: '#/definitions/errorResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
   /courier/courier-coverage-code/{uid}:
@@ -3100,6 +3145,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
     get:
@@ -3117,6 +3164,8 @@ paths:
           description: CourierCoverageCode
           schema:
             $ref: '#/definitions/CourierCoverageCode'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
     put:
@@ -3139,6 +3188,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
   /courier/courier-coverage-code/import:
@@ -3155,6 +3206,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ImportCourierCoverageCode'
+      security:
+      - Bearer: []
       tags:
       - Courier-Coverage-Code
   /courier/courier-services:
@@ -3199,6 +3252,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Services
     post:
@@ -3219,6 +3274,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Services
   /courier/courier-services/{uid}:
@@ -3241,6 +3298,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Services
     get:
@@ -3262,6 +3321,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Services
     put:
@@ -3288,6 +3349,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Services
   /courier/courier/{uid}:
@@ -3306,6 +3369,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Couriers
     get:
@@ -3327,6 +3392,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Couriers
     put:
@@ -3353,6 +3420,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Couriers
   /courier/shipping-type:
@@ -3362,6 +3431,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ShippingTypeList'
+      security:
+      - Bearer: []
       tags:
       - Couriers
   /other/shipment-predefined:
@@ -3406,6 +3477,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Predefined
   /other/shipment-predefined/{uid}:
@@ -3421,6 +3494,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/GetShippmentPredefined'
+      security:
+      - Bearer: []
       tags:
       - Courier-Predefined
     put:
@@ -3447,6 +3522,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Courier-Predefined
   /shipping/cancel-order/{uid}:
@@ -3469,6 +3546,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/cancel-pickup/{uid}:
@@ -3486,6 +3565,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/order-shipping:
@@ -3534,6 +3615,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/GetOrderShippingList'
+      security:
+      - Bearer: []
       tags:
       - Shipping
     post:
@@ -3548,6 +3631,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/CreateDelivery'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/order-shipping/{uid}:
@@ -3563,6 +3648,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/GetOrderShippingDetail'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/order-tracking/{uid}:
@@ -3583,6 +3670,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/OrderShippingTracking'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/shipping-rate:
@@ -3598,6 +3687,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ShippingRate'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/shipping-rate/{shipping-type}:
@@ -3618,6 +3709,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/ShippingRate'
+      security:
+      - Bearer: []
       tags:
       - Shipping
   /shipping/webhook/shipper:
@@ -3635,6 +3728,8 @@ paths:
           description: SuccessResponse
           schema:
             $ref: '#/definitions/SuccessResponse'
+      security:
+      - Bearer: []
       tags:
       - Shipping
 produces:
@@ -3730,4 +3825,9 @@ responses:
 schemes:
 - http
 - https
+securityDefinitions:
+  Bearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
